--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/carrental?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=caledonia10
 
+
+server.port=8080
